--- a/bkstylesheet.css
+++ b/bkstylesheet.css
@@ -33,9 +33,16 @@ img.pl {
 #mainhome
 {
   background-image: url("worldmaptest.jpg");
-  background-size: 100%;
-  padding-bottom: 50px;
-  margin-bottom: 0px;
+    min-height: 100%;
+    min-width: 1024px;
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+
+    /* Set up positioning */
+    position: fixed;
+    top: 20;
+    left: 0;
 }
 
 div.main {
@@ -43,6 +50,7 @@ div.main {
   padding-top: 20px;
   padding-bottom: 60px;
   margin-bottom: 60px;
+  margin-top: 170px;
 }
 
 #githubref
@@ -152,11 +160,18 @@ h2 {
 }
 
 div.header {
+  overflow: hidden;
+  top: 0px;
   background-image: url("testheaderbg.jpg");
+  position: fixed;
+  width: 100%;
 }
 
 div.footer
 {
+  bottom: 0px;
+  width: 100%;
+  position: fixed;
   background-color: black;
   color: #99badd;
   margin-top:: 0;
