--- a/bkstylesheet.css
+++ b/bkstylesheet.css
@@ -80,6 +80,13 @@ body
   margin: auto;
 }
 
+#headshot
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 a.nav {
 display: block;
 padding: 8px;
