--- a/bkstylesheet.css
+++ b/bkstylesheet.css
@@ -129,6 +129,19 @@ p.p50
   margin-right: auto;
 }
 
+p.viewcode
+{
+  padding-bottom: 50px;
+}
+
+p.proj
+{
+  padding-top: 25px;
+  font-size: 28px;
+  font-style: italic;
+  font-weight: bold;
+}
+
 h1, h4 {
   font-family: "Franklin Gothic Medium";
   text-align: center;
